--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "pg": "^8.13.1",
+    "@aws-sdk/client-rds": "3.744.0"
   }
 }
